@@ -45,6 +45,7 @@ PROCESS select element_data = {
    value_attr = 'id'
          name = 'parent_id'
 default_values= [parent_id]
+default_blank = 1
 } ?>
 </div>
 <div class="inputrow" id="daterow">
