@@ -21,6 +21,7 @@ include_stylesheet=["UI/setup/stylesheet.css"] ?>
                             type  = 'text'
                            label  = text('Username')
                             class = 'username'
+                         required = 'true'
 } ?>
 </div>
 <div class="input_row">
@@ -64,6 +65,7 @@ text('Password') ?></label>
     type = 'text'
     size = '15'
    label = text('First Name') #'
+required = 'true'
 } ?>
 </div>
 <div class="input_row">
@@ -73,6 +75,7 @@ text('Password') ?></label>
     type = 'text'
     size = '15'
    label = text('Last name') #'
+required = 'true'
 } ?>
 </div>
 <div class="input_row">
@@ -82,6 +85,7 @@ text('Password') ?></label>
     type = 'text'
     size = '15'
    label = text('Employee Number') #'
+required = 'true'
 } ?>
 </div>
 <div class="input_row">
@@ -91,6 +95,7 @@ text('Password') ?></label>
     type = 'text'
     size = '10'
    label = text('Date of Birth') #'
+required = 'true'
 } ?>
 </div>
 <div class="input_row">
@@ -100,6 +105,7 @@ text('Password') ?></label>
     type = 'text'
     size = '15'
    label = text('Tax ID/SSN') #'
+required = 'true'
 } ?>
 </div>
 <div class="input_row">
@@ -111,6 +117,7 @@ INCLUDE select element_data = {
    default_values = [country_id]
              name = 'country_id'
             label = 'Country'
+         required = 'true'
 } ?>
 </div>
 <div class="input_row">
